<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="60dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/battery"
        android:textAlignment="center" />

    <ProgressBar
        android:id="@+id/batteryLife"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:indeterminate="false"
        android:max="100"
        android:padding="2dip"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/batteryLife"
        android:text="Success Progress"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textViewConn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:text="@string/data_stream_information"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/LinearLayout03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_below="@+id/textViewConn"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <Button
            android:id="@+id/startAll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="startButtonAll"
            android:text="@string/start_all" />

        <Button
            android:id="@+id/stopAll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:onClick="stopButtonAll"
            android:text="@string/stop_all" />
    </LinearLayout>

    <Button
        android:id="@+id/stopAllAndSetName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/LinearLayout03"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="stopButtonAllAndSave"
        android:text="@string/stop_all_and_save_data" />

    <Button
        android:id="@+id/resetTrick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/stopAllAndSetName"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="resetTrick"
        android:visibility="gone"
        android:text="Reset" />

    <TextView
        android:id="@+id/trickRotationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/resetTrick"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/welcome_to_skatetricks"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/trickRotationTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trickRotationText"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:text="Trick Rotation xyz"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/trickTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trickRotationTextView"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:text="Name of a trick"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/trickGif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trickRotationTextView"
        android:src="@drawable/kickfliplastframe" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/trickGif"
        android:text="Accelerometer Data Output"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:text="Gyroscope Data Output"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>